JG-2003-03-24-0  Enhancem.: Added aimk switch -purify to instrument code for
                            memory debugging with purify.

AA-2003-03-21-3  Bugfix:    3rdparty/qtcsh/tc.alloc.c DARWIN define

AA-2003-03-21-3  Bugfix:    3rdparty/qtcsh/DARWIN added

AA-2003-03-21-2  Bugfix:    MOTIFHOME for darwin fix from Derek added

AA-2003-03-21-1  Bugfix:    SIGCLD define for DARWIN FREEBSD

AA-2003-03-21-0  Bugfix:    fix aimk -only-depend 
                            sge_depend warnings that lead to sge fault during
                            aimk depend. Missing -DNeedVarargsPrototypes for
                            imk depend. Missing -DNeedVarargsPrototypes for
                            SOLARIS*
                            aimk.site missing variable defines
                            depend rule in 3rdparty/qmake/DARWIN/Makefile

JG-2003-03-20-0  Bugfix:    fix aimk -gcc for solaris86

AA-2003-03-19-1  Bugfix:    Darwin and Freebsd merge from maintrunc
                 Changed:   all

AA-2003-03-19-0  Bugfix:    support for openssl 0.9.6x and 0.9.7x
                 Changed:   all

JG-2003-03-18-0  Bugfix:    Fixed too small buffer in sge logging.
                 Review:    CR
                 Changed:   all

EB-2003-03-17-0  Bugfix:    qsh/qrsh/qlogin might core with segementation 
                            violation
                 Issue:     #508
                 Bugtraq:   #4833346
                 Review:    JG
                 Changed:   qsh

AA-2003-03-13-0  Bugfix:    sge->sgeee upgrade failed, corrected
                 Issue:     #506
                 Bugtraq:   
                 Review     AS
                 Changed    util/sge_update.sh

CR-2003-03-12-0  Bugfix:    - qevent compile error for tru64

AA-2003-03-12-0  Bugfix:    util/sge_upgrade.sh syntax errors

CR-2003-03-05-0  Bugfix:    Missing "return" in main() function reports
                            compile error for solaris86
